--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,61 @@
 /*font-family: 'Lato', sans-serif;
 font-family: 'Lora', serif;*/
-
-h1 {
-  color: blue;
-  font-family: "Lora", serif;
+:root {
+  --branding-color: #04fbad;
+  --secondary-color: #e0fbf2;
+  --heading-font-family: "Lora", serif;
+  --default-font-family: "Lato", sans-serif;
 }
 
-h2 {
-  font-family: "Lato", sans-serif;
+.hero {
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
+
+.hero h1 {
+  font-size: 96px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+  line-height: 36px;
+  font-size: 24px;
+  margin-top: 0px;
+  margin-bottom: 42px;
+}
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: black;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  text-decoration: none;
+  transition: color 0.15s ease-in-out;
+}
+
+.btn-branding:hover {
+  color: white;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: var(--heading-font-family);
+}
+
+p {
+  font-family: var(--default-font-family);
 }
