--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /*font-family: 'Lato', sans-serif;
 font-family: 'Lora', serif;*/
+
 :root {
   --branding-color: #04fbad;
   --secondary-color: #e0fbf2;
@@ -59,4 +60,7 @@ h4 {
 
 p {
   font-family: var(--default-font-family);
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
