--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,34 @@ h2 {
 img {
   background-color: #e0fbf2;
 }
+
+.about-section container {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+@media (min-width: 992px) {
+  .col-lg-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+}
+
+@media (max-width: 900px) {
+  .about-section-content {
+    text-align: center;
+  }
+}
+
+.about-section-content {
+  margin: 30px;
+}
