--- a/styles.css
+++ b/styles.css
@@ -107,18 +107,32 @@ img {
   background-color: #e0fbf2;
 }
 
-.about-section container {
+.content-container container {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
+}
+
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
+  margin: 30px;
 }
 
 @media (min-width: 992px) {
@@ -129,11 +143,7 @@ img {
 }
 
 @media (max-width: 900px) {
-  .about-section-content {
+  .content {
     text-align: center;
   }
-}
-
-.about-section-content {
-  margin: 30px;
 }
