--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,31 @@ element.style {
 .navbar-brand {
   margin-left: 20px;
 }
+
+footer {
+  display: block;
+  margin: 60px 0;
+  box-sizing: border-box;
+}
+
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: black;
+  background: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
