--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,12 @@ h4 {
   font-size: 48px;
 }
 
+h5 {
+  font-size: 15px;
+  text-align: center;
+  margin-top: 30px;
+}
+
 .btn-branding-outline {
   font-family: var(--default-font-family);
   color: gray;
